test/language/spec/templates/valid/function_template.topo
// Function template

namespace math {
  public:
    template<typename T>
    T identity(T value);

    template<typename T>
    T add(T a, T b);
}
