test/language/spec/templates/invalid/duplicate_template_param.topo
// TEST: duplicate template parameter name
// EXPECT-ERROR: duplicate template parameter

namespace math {
  public:
    template<typename T, typename T>
    void bad(T x);
}
